# QuadrupedSim

./: README.md
PyBullet_RL/: requirements.txt  server.py  spot_ars.py  spot_handstand_env.py
PyBullet_RL/inference/: test_handstand.py
PyBullet_RL/pupper_env/: pupper_env.py
PyBullet_RL/pupper_env/urdf/: pupper.urdf
PyBullet_RL/train/: ppo_training.py
RL_train/: code.py  gym_env.py  train.py
simulation_old/src/quadruped_sim/: package.xml  setup.py
simulation_old/src/quadruped_sim/config/: gait_parameters.yml
simulation_old/src/quadruped_sim/launch/: spawn_robot.launch.py  teleop_keyboard.launch.py
simulation_old/src/quadruped_sim/scripts/: gait_controller.py  keyboard_teleop.py
simulation_old/src/quadruped_sim/urdf/: hyperdog.urdf
